[package]
name = "fugue-ptrace"
version = "0.1.0"
authors = ["Sam Thomas <st@xv.ax>"]
edition = "2018"

[dependencies]
anyhow = "1"
bitflags = "1"
clap = "2"
fnv = "1"
libc = "0.2"
fugue = { version = "0.2", registry = "fugue" }
ifstructs = "0.1"
nix = "0.20"
parking_lot = "0.11"
procmaps = "0.4"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
toml = "0.5"
